# C-book

./: CMakeLists.txt  README.md  p10  p11  p12  p3  p4  p5  p6  p7  p8  p9
DataStructure/src/Linked List/: p1.c  p10.c  p11.c  p12.c  p2.c  p3.c  p4.c  p5.c  p6.c  p7.c  p8.c  p9.c
IntroductionToC/: .gitignore  CMakeLists.txt  amstrongNumberEasy  digitsinNumber  functionPointer  getChar  p1  p10  p11  p12  p13  p14  p15  p16  p17  p18  p19  p2  p20  p21  p22  p23  p3  p4  p5  p6  p7  p8  p9  primeNumber  reverseNumber  singleDigitSumofaNumber  sumOfDigit  sumofFactorailofDigit  t
IntroductionToC/src/Arrays_and_Pointers/: p1.c  p10.c  p11.c  p12.c  p13.c  p2.c  p3.c  p4.c  p5.c  p6.c  p7.c  p8.c  p9.c
IntroductionToC/src/Function_And_Storage_Classes/: p1.c  p2.c  p3.c  p4.c  p5.c
IntroductionToC/src/Misc/: getCh.c  getChar.c
IntroductionToC/src/Strings/: p1.c  p10.c  p11.c  p12.c  p2.c  p3.c  p4.c  p5.c  p6.c  p7.c  p8.c  p9.c
IntroductionToC/src/basic/: amstrongNumberEasy.c  digitsinNumber.c  primeNumber.c  t.c  (+4 more)
firstC/: .gitignore  23  CMakeLists.txt  Recursion  factorial  library  library.c  library.h  logicalOperation  q1  q2  q3  q4  q5  q6  q7  t1  t10  t11  t12  t13  t14  t15  t16  t17  t18  t19  t2  t21  t22  t24  t3  t4  t5  t6  t7  t8
firstC/src/: logicalOperation.c
firstC/src/chapter-2/: t1.c  t10.c  t11.c  t12.c  t13.c  t14.c  t15.c  t16.c  t17.c  t18.c  t19.c  t2.c  t20.c  t21.c  t22.c  t23.c  t24.c  t3.c  t4.c  t5.c  t6.c  t7.c  t8.c  t9.c
firstC/src/questions/: q1.c  q2.c  q3.c  q4.c  q5.c  q6.c  q7.c
firstC/src/recursion/: factorial.c
(+82 files in other folders)
